--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "microcms-js-sdk": "^2.5.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
